# Carla-Autoware-Bridge

src/: model3.rviz
src/autoware_common/tmp/lanelet2_extension/: README.md  package.xml
src/autoware_common/tmp/lanelet2_extension/include/lanelet2_extension/utility/: message_conversion.hpp  route_checker.hpp
src/autoware_common/tmp/lanelet2_extension/test/src/: test_message_conversion.cpp  test_route_checker.cpp
src/autoware_msgs/autoware_control_msgs/: CMakeLists.txt
src/autoware_msgs/autoware_control_msgs/msg/: AckermannControlCommand.idl  AckermannLateralCommand.idl  HighLevelControlCommand.idl  LongitudinalCommand.idl
src/autoware_msgs/autoware_geometry_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/autoware_geometry_msgs/msg/: Complex32.idl  Quaternion32.idl  RelativePositionWithCovarianceStamped.idl
src/autoware_msgs/autoware_mapping_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/autoware_mapping_msgs/msg/: HADMapBin.idl  HADMapSegment.idl  MapPrimitive.idl
src/autoware_msgs/autoware_mapping_msgs/srv/: HADMapService.idl
src/autoware_msgs/autoware_perception_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/autoware_perception_msgs/msg/: BoundingBox.idl  BoundingBoxArray.idl  ClassifiedRoi.idl  ClassifiedRoiArray.idl  DetectedObject.idl  DetectedObjectKinematics.idl  DetectedObjects.idl  ObjectClassification.idl  PointClusters.idl  PointXYZIF.idl  PredictedObject.idl  PredictedObjectKinematics.idl  PredictedObjects.idl  PredictedPath.idl  Shape.idl  TrackedObject.idl  TrackedObjectKinematics.idl  TrackedObjects.idl  TrafficLight.idl
src/autoware_msgs/autoware_planning_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/autoware_planning_msgs/action/: PlanTrajectory.idl  PlannerCostmap.idl  RecordTrajectory.idl  ReplayTrajectory.idl
src/autoware_msgs/autoware_planning_msgs/msg/: HADMapRoute.idl  OrderMovement.idl  Path.idl  PathPoint.idl  PathPointWithLaneId.idl  PathWithLaneId.idl  Route.idl  Trajectory.idl  TrajectoryPoint.idl
src/autoware_msgs/autoware_planning_msgs/srv/: ModifyTrajectory.idl
src/autoware_msgs/autoware_system_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/autoware_system_msgs/msg/: AutowareState.idl  ControlDiagnostic.idl  DiagnosticHeader.idl  DrivingCapability.idl  EmergencyState.idl  HazardStatus.idl  HazardStatusStamped.idl
src/autoware_msgs/autoware_vehicle_msgs/: CMakeLists.txt  package.xml
src/autoware_msgs/autoware_vehicle_msgs/msg/: ControlModeCommand.idl  ControlModeReport.idl  Engage.idl  GearCommand.idl  GearReport.idl  HandBrakeCommand.idl  HandBrakeReport.idl  HazardLightsCommand.idl  HazardLightsReport.idl  HeadlightsCommand.idl  HeadlightsReport.idl  HornCommand.idl  HornReport.idl  RawControlCommand.idl  StationaryLockingCommand.idl  SteeringReport.idl  TurnIndicatorsCommand.idl  TurnIndicatorsReport.idl  VehicleControlCommand.idl  VehicleKinematicState.idl  VehicleOdometry.idl  VehicleStateCommand.idl  VehicleStateReport.idl  VelocityReport.idl  WheelEncoder.idl  WipersCommand.idl  WipersReport.idl
src/autoware_msgs/autoware_vehicle_msgs/srv/: AutonomyModeChange.idl
src/carla/ros-bridge/carla_manual_control/src/carla_manual_control/: carla_manual_control.py
src/carla/ros-bridge/carla_ros_bridge/src/carla_ros_bridge/: camera.py
src/carla/ros-bridge/carla_spawn_objects/config/: objects.json
src/carla/ros-bridge/carla_spawn_objects/launch/: carla_example_ego_vehicle.launch.py  carla_spawn_objects.launch.py
src/carla/ros-bridge/ros_compatibility/src/ros_compatibility/: __init__.py  qos.py
src/carla_autoware_bridge/: package.xml
src/carla_autoware_bridge/carla_autoware_bridge/: aw_bridge.py
src/carla_autoware_bridge/carla_autoware_bridge/converter/: steering_status.py  velocity_report.py
src/carla_autoware_bridge/config/: objects.json  objects_ori.json
src/carla_autoware_bridge/launch/: carla_aw_bridge.launch.py
src/lidar2cam/: CMakeLists.txt  package.xml
src/lidar2cam/launch/: lidar2cam.launch.py
src/lidar2cam/src/: lidar2cam_node.cpp
