<?xml version="1.0"?>
<package format="2">
  <name>lidar2cam</name>
  <version>0.0.1</version>
  <description>The lidar2cam package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <build_depend>ament_cmake</build_depend>
  <build_depend>Eigen3</build_depend>
  <build_depend>OpenCV</build_depend>

  <exec_depend>Eigen3</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
